  The source ip's of any received incompatible updates are listed in the property 'version-mismatch'.
- Changed: Enabling debug for a user now also enables web transaction logs for that user (same as profile debug).
  NOTE: Kicking the users sessions may be required before this takes effect (both after enabling and disabling).
- Added: Cws event for found service now shown in the status-web (despite the command being called error-log).
- Added: Experimental sid cache linking feature, allows cache hits based on meta-data like sid rather than ecm payload.
  Links added via the web commands are stored in etc/links.cfg (this file is monitored for changes and autoloaded also).
- Added: More sanity checks to DcwFilterPlugin (checksums, length and an option to monitor all replies for duplicates).
- Added: DreamboxPlugin (csp-agent) support for more/older dm500 images. Basic (unsecured) file upload support.
- Added: proxy-reference.html updated with highlighting for important elements and additional examples.
- Added: New AdvXmlUserManager similar to XmlUserManager but with "advanced" features (ecm-rate, start and expire-date)
  based on the suggestions made in TestUserManager.

- Changes to proxy.xml:
  Added: Attribute 'enable-service-linking' to <cache-handler> (true/false, default: false). Enables sid cache linker.
  Added: Attribute 'allow-different-ip' to <user-manager>, allows newcamd connections from different ip sources
  for the same user.

- Changes to the http/xml api:
  Added: Attribute 'filtered-by' to <ecm> (transaction logs). Contains the reason for a B flag, or the filtering plugin.
  Added: New event type 9 - "found service" added to connector events output (error-log, yes - not really an error).
  Added: New ctrl command 'set-connector-metric', allows changing individual connector metrics without config reload.
  Added: New ctrl command 'set-au-user', forces a specified user to au status for a connector (kicking existing sessions)